# mis

./: .dockerignore  .gitignore  backend_code.txt  docker-compose.yml  main.py  package-lock.json  pyproject.toml
backend/: Dockerfile  main.py  pyproject.toml  reset_db.py  temporary_syncing.py  test_mis_record.py  test_monthly_report.py
backend/config/: column_config.json
backend/db/: models.py  session.py
backend/routes/: auth_routes.py  complaint_routes.py  daily_reporting_routes.py  ebd_routes.py  edit_routes.py  reports_routes.py
backend/schemas/: auth.py  complaints.py  edit_request.py  mis.py
backend/schemas/reports/: daily_weekly_reports.py  monthly_reports.py
backend/services/: utils.py
backend/services/auth/: auth_service.py  config.py  dependencies.py  rbac.py  scope.py
backend/services/complaints/: query.py
backend/services/daily_reporting/: daily_rep_service.py
backend/services/discount/: discount_service.py  discount_strategies.py
backend/services/edit_requests/: edit_requests_service.py
backend/services/ingestion/: __init__.py  excel_parser.py  (+2 more)
frontend/: Dockerfile  api.py  api_old.py  auth.py  auth_old.py  fixing_form_implementation.md  fixing_forms.py  main.py  new_main.py  pyproject.toml  state.py  utils.py  utils_old.py
frontend/auth/: auth.py
frontend/components/: charts.py  dialogs.py  history.py  layout.py  table.py  widgets.py
frontend/form/: state.py
frontend/logger/: logger_setup.py
frontend/page/: complaints-dashboard.py
frontend/pages/: complaint.py  daily_reporting.py  dashboard.py  form.py  login.py  mis.py
frontend/services/: api.py  reference_data.py
frontend/utils/: constants.py  formatting.py  parsing.py
(+99 files in other folders)
