[project]
name = "frontend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.28.1",
    "nicegui[highcharts]>=3.9.0",
    "pyjwt>=2.12.1",
]

[dependency-groups]
dev = [
    "pyngrok>=8.0.0",
    "selenium>=4.41.0",
    "webdriver-manager>=4.0.2",
]
